--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 distlib==0.3.8
 Django==5.0.7
 djangorestframework==3.15.2
+drf-writable-nested==0.7.0
 filelock==3.15.4
 identify==2.6.0
 iniconfig==2.0.0
