--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pre-commit==3.8.0
 pytest==8.3.2
 pytest-django==4.8.0
 PyYAML==6.0.1
+qrcode==8.0
 snowballstemmer==2.2.0
 sqlparse==0.5.1
 virtualenv==20.26.3
